--- a/src/components/Routine/Routine.scss
+++ b/src/components/Routine/Routine.scss
@@ -62,3 +62,28 @@
     cursor: pointer;
   }
 }
+
+.date-list-table {
+  text-align: center;
+  margin: 0 auto;
+  width: 80%;
+  font-size: 90%;
+  font-weight: 400;
+  border-collapse: collapse;
+
+  th {
+    color: $main-color;
+    padding: 0.5% 5%;
+  }
+
+  td {
+    color: $grey;
+    padding: 0.5% 5%;
+
+    a {
+      color: $main-color;
+      text-decoration: none;
+      font-weight: 300;
+    }
+  }
+}
