--- a/src/components/Train/Train.css
+++ b/src/components/Train/Train.css
@@ -62,4 +62,10 @@ button {
     border: 1px #bababa solid;
     padding: 0.5% 1%; }
 
+.file-wrapper {
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  padding: 55% 40%;
+  margin: 0 5%; }
+
 /*# sourceMappingURL=Train.css.map */
