--- a/src/components/Train/Train.scss
+++ b/src/components/Train/Train.scss
@@ -52,3 +52,10 @@
     padding: 0.5% 1%;
   }
 }
+
+.file-wrapper {
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  padding: 55% 40%;
+  margin: 0 5%;
+}
