--- a/src/components/International/International.scss
+++ b/src/components/International/International.scss
@@ -76,6 +76,8 @@
     border-top: 1px $light-grey solid;
     border-bottom: 1px $light-grey solid;
     text-decoration: underline;
+
+    cursor: default;
   }
 
   .no-decoration {
